--- a/milestone2/package.json
+++ b/milestone2/package.json
@@ -8,16 +8,20 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "css-loader": "^6.7.1",
     "mitt": "^3.0.0",
     "node-modules": "^1.0.1",
     "node-polyfill-webpack-plugin": "^1.1.4",
+    "style-loader": "^3.3.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-service": "~5.0.0",
+    "vue-loader": "^17.0.0",
+    "vue-template-compiler": "^2.6.14"
   },
   "browserslist": [
     "> 1%",
