--- a/milestone2/package.json
+++ b/milestone2/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "css-loader": "^6.7.1",
+    "fs": "0.0.1-security",
     "mitt": "^3.0.0",
     "node-modules": "^1.0.1",
     "node-polyfill-webpack-plugin": "^1.1.4",
