--- a/milestone3/site/package.json
+++ b/milestone3/site/package.json
@@ -15,7 +15,8 @@
     "node-polyfill-webpack-plugin": "^1.1.4",
     "style-loader": "^3.3.1",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
